[gd_scene load_steps=6 format=3 uid="uid://bdfo2ktxggpi6"]

[ext_resource type="Script" uid="uid://d37db3lg3je53" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://bkc7x625ufmje" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://dqrnqy70uj08i" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" path="res://ground.tscn" id="6_7mycd"]
[ext_resource type="PackedScene" uid="uid://c0s6k3qcbdy3j" path="res://node_2d.tscn" id="7_272bh"]

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.906954, 0.9045192, 0.48659497, 1)

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[node name="Ground" parent="." instance=ExtResource("6_7mycd")]

[node name="Node2D" parent="." instance=ExtResource("7_272bh")]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
